--- a/nginx.conf
+++ b/nginx.conf
@@ -8,11 +8,17 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        # Evita bloqueo de iframe
-        add_header Content-Security-Policy "frame-ancestors 'self' http://localhost:4200" always;
+        # === Evitar bloqueo de iframe ===
+        add_header Content-Security-Policy "frame-ancestors 'self' http://localhost:4200 https://rpe-topaz.vercel.app" always;
+
+        # === Habilitar CORS ===
         add_header Access-Control-Allow-Origin "http://localhost:4200" always;
+        add_header Access-Control-Allow-Origin "https://rpe-topaz.vercel.app" always;
         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
         add_header Access-Control-Allow-Headers "*" always;
+
+        # === Permitir carga en iframe desde ambos orígenes ===
         add_header X-Frame-Options "ALLOW-FROM http://localhost:4200" always;
+        add_header X-Frame-Options "ALLOW-FROM https://rpe-topaz.vercel.app" always;
     }
 }
